<resources>
    <string name="app_name">MB.Delivery</string>

    <string name="logout">Вы успешно разлогинились</string>

    <string name="auth_login_hint">Логин</string>
    <string name="auth_pwd_hint">Пароль</string>
    <string name="auth_next">Войти в систему</string>
    <string name="auth_project_change">Сменить</string>
    <string name="auth_project_label">Номер проекта</string>
    <string name="auth_error">Возможно, вы ошиблись при вводе логина или пароля. Попробуйте еще раз.</string>

    <string name="auth_project_hint">Номер проекта</string>
    <string name="auth_project_next">Ввести номер проекта</string>
    <string name="auth_host_hint">https://…</string>
    <string name="auth_host_next">Продолжить</string>
    <string name="auth_project_or_host">или укажите ссылку на хост</string>
    <string name="auth_host_or_project">или введите номер проекта</string>
    <string name="auth_host_label">Хост</string>

    <string name="menu_orders">Заказы</string>
    <string name="menu_pause">Нагрузка</string>
    <string name="menu_cats">Меню</string>
    <string name="menu_stops">Стоп-лист</string>
    <string name="menu_help">Нужна помощь</string>

    <string name="help_text">Если у вас возник срочный вопрос, позвоните в нашу службу поддержки:</string>
    <string name="help_phone">+7 499 460 56 95</string>

    <string name="pause_period_title">На какой период?</string>
    <string name="pause_period_15">15 мин</string>
    <string name="pause_period_30">30 мин</string>
    <string name="pause_period_60">Час</string>
    <string name="pause_period_day">До конца дня</string>
    <string name="pause_reason_title">В чем причина?</string>
    <string name="pause_reason_time">Не успеваем</string>
    <string name="pause_reason_food">Закончились продукты</string>
    <string name="pause_reason_other">Другое</string>
    <string name="pause_action">Поставить на паузу</string>
    <string name="pause_start_action">Снять</string>
    <string name="pause_org_title">Организация</string>
    <string name="pause_org_hint">Выберите организацию</string>
    <string name="pause_mode_highload">Высокая нагрузка</string>
    <string name="pause_mode_stop">Стоп</string>
    <string name="pause_gap_title">Добавить минут</string>
    <string name="pause_comment_hint">Комментарий</string>
    <string name="pause_action_highload">Включить нагрузку</string>
    <string name="pause_action_stop">Поставить на стоп</string>
    <string name="pause_status_highload">Сейчас включена высокая нагрузка</string>
    <string name="pause_status_stop">Организация на стопе</string>
    <string name="pause_load_error">Не удалось загрузить организации</string>
    <string name="highload_empty">Нет организаций на стопе или высокой нагрузке</string>
    <string name="highload_apply">Поставить высокую нагрузку или стоп</string>
    <string name="highload_status_stop">Стоп</string>
    <string name="highload_status_highload">Высокая нагрузка</string>
    <string name="highload_reload">Обновить</string>
    <string name="highload_no_idle">Все доступные точки уже на стопе или высокой нагрузке</string>
    <string name="highload_drop_error">Не удалось снять статус</string>

    <string name="categories_search_hint">Найти блюдо</string>
    <string name="categories_reload">Загрузить меню</string>

    <string name="stops_search_hint">Найти блюдо</string>
    <string name="stops_dialog_text">Вы уверены, что хотите добавить продукт в стоп-лист?</string>
    <string name="stops_dialog_yes">Да</string>
    <string name="stops_dialog_no">Нет</string>
    <string name="stops_reload">Обновить</string>
    <string name="stops_empty">Нет блюд на стопе</string>
    <string name="stops_apply">Поставить на стоп</string>
    <string name="stops_product_search">Найти блюдо</string>
    <string name="stops_drop_error">Не удалось снять со стопа</string>
    <string name="stops_apply_error">Не удалось поставить на стоп</string>
    <string name="stops_no_orgs">Нет доступных организаций</string>
    <string name="stops_pick_org">Сначала выберите организацию</string>

    <string name="orders_error">Ошибка обновления списка - %s</string>
    <string name="order_active">Активные</string>
    <string name="order_inactive">Отправленные</string>
    <string name="order_more">Подробнее о заказе</string>
    <string name="order_time_today">Сегодня</string>
    <string name="order_time_at">в</string>
    <string name="order_time_label">Время создания</string>
    <string name="order_due_label">Приготовить к</string>
    <string name="order_status_label">Текущий статус</string>
    <string name="order_forks_label">Приборы</string>
    <string name="order_status_new">Новый</string>
    <string name="order_status_cooking">Готовится</string>
    <string name="order_status_queue">Принят</string>
    <string name="order_status_queue_2">Принять</string>
    <string name="order_status_ready">Готов</string>
    <string name="order_status_start">Начать готовить</string>
    <string name="order_status_delivery">Передан курьеру</string>
    <string name="order_status_delivered">Доставлен</string>
    <string name="order_client_comment">🔥 %s</string>
    <string name="order_status_error">Не все позиции готовы</string>
    <string name="order_edit_comment">Комментарий</string>
    <string name="order_edit_organization">Организация</string>
    <string name="order_edit_cart">Состав</string>
    <string name="order_export_pos">Выгрузить в POS</string>
    <string name="order_export_pos_done">Заказ уже выгружен в POS</string>
    <string name="order_export_pos_queued">Заказ поставлен в очередь POS</string>
    <string name="order_edit_comment_title">Комментарий к заказу</string>
    <string name="order_edit_organization_title">Организация заказа</string>
    <string name="order_edit_cart_title">Состав заказа</string>
    <string name="order_edit_cart_add">Добавить блюдо</string>
    <string name="order_edit_cart_save">Сохранить состав</string>
    <string name="order_edit_cart_remove">Удалить</string>
    <string name="order_edit_save">Сохранить</string>
    <string name="order_edit_cancel">Отмена</string>
    <string name="order_edit_modifiers_title">Модификаторы</string>

    <plurals name="order_forks_value">
        <item quantity="zero">Не надо</item>
        <item quantity="one">%1$d комплект</item>
        <item quantity="two">%1$d комплекта</item>
        <item quantity="few">%1$d комплекта</item>
        <item quantity="many">%1$d комплектов</item>
        <item quantity="other">%1$d комплектов</item>
    </plurals>

    <string name="order_single_back">Все заказы</string>
    <string name="order_single_total">Итого к оплате</string>
    <string name="order_single_more">Техкарта</string>
    <string name="order_single_action_start">Начать</string>
    <string name="order_single_action_ready">Готово</string>
    <string name="order_single_action_done">Отдать</string>
    <string name="order_single_status_new">Новый</string>
    <string name="order_single_status_ready">Можно готовить</string>
    <string name="order_single_status_cooking">Готовится</string>
    <string name="order_single_status_cooked">Приготовлено</string>
    <string name="order_single_status_done">Отдан</string>

    <string name="receipt_back">Заказ № %s</string>
    <string name="receipt_back_menu">Меню</string>
    <string name="receipt_weight">Вес готового продукта в расчете на 1 порцию - %s</string>
    <string name="receipt_column_number">№</string>
    <string name="receipt_column_title">Наименование\nпродукта</string>
    <string name="receipt_column_piece">Ед.\nизм</string>
    <string name="receipt_column_piece_weight">Брутто\nв ед. изм</string>
    <string name="receipt_column_gross_weight">Вес\nбрутто, кг</string>
    <string name="receipt_column_net_weight">Вес нетто\nили п/ф, кг</string>
    <string name="receipt_column_ready_weight">Вес готового\nпродукта, кг</string>

</resources>