<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_bg_80"
    android:fitsSystemWindows="true">

    <mb.delivery.operator.ui.components.CheckableTextView
        android:id="@+id/tvOrders"
        style="@style/ButtonStyleMenu"
        android:layout_marginStart="@dimen/dp60"
        android:layout_marginTop="@dimen/dp64"
        android:layout_marginEnd="@dimen/dp10"
        android:drawableStart="@drawable/sl_orders"
        android:text="@string/menu_orders"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/tvPause"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <mb.delivery.operator.ui.components.CheckableTextView
        android:id="@+id/tvPause"
        style="@style/ButtonStyleMenu"
        android:layout_marginTop="@dimen/dp64"
        android:layout_marginEnd="@dimen/dp10"
        android:drawableStart="@drawable/sl_pause"
        android:text="@string/menu_pause"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/tvCats"
        app:layout_constraintStart_toEndOf="@+id/tvOrders"
        app:layout_constraintTop_toTopOf="parent" />

    <mb.delivery.operator.ui.components.CheckableTextView
        android:id="@+id/tvCats"
        style="@style/ButtonStyleMenu"
        android:layout_marginTop="@dimen/dp64"
        android:layout_marginEnd="@dimen/dp10"
        android:drawableStart="@drawable/sl_menu"
        android:text="@string/menu_cats"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/tvStops"
        app:layout_constraintStart_toEndOf="@+id/tvPause"
        app:layout_constraintTop_toTopOf="parent" />

    <mb.delivery.operator.ui.components.CheckableTextView
        android:id="@+id/tvStops"
        style="@style/ButtonStyleMenu"
        android:layout_marginTop="@dimen/dp64"
        android:layout_marginEnd="@dimen/dp10"
        android:drawableStart="@drawable/sl_stops"
        android:text="@string/menu_stops"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/tvHelp"
        app:layout_constraintStart_toEndOf="@+id/tvCats"
        app:layout_constraintTop_toTopOf="parent" />

    <mb.delivery.operator.ui.components.CheckableTextView
        android:id="@+id/tvHelp"
        style="@style/ButtonStyleMenu"
        android:layout_marginTop="@dimen/dp64"
        android:layout_marginEnd="@dimen/dp50"
        android:drawableStart="@drawable/sl_help"
        android:text="@string/menu_help"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvStops"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/vContentWrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_bg_rounded_wh_32"
        android:elevation="2dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.62">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/dp48"
            android:paddingTop="@dimen/dp36"
            android:paddingEnd="@dimen/dp48"
            android:paddingBottom="@dimen/dp36">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvOrgTitle"
                style="@style/TextStyle.Black.24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pause_org_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvOrganization"
                style="@style/EditStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp12"
                android:background="@drawable/ic_bg_rounded_grey_12"
                android:drawableEnd="@drawable/ic_chevron_big_down"
                android:gravity="center_vertical"
                android:hint="@string/pause_org_hint"
                android:minHeight="@dimen/dp64" />

            <RadioGroup
                android:id="@+id/rgMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp24"
                android:orientation="horizontal"
                android:visibility="gone">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rbModeHighload"
                    style="@style/ButtonStyleRadio"
                    android:layout_marginEnd="@dimen/dp28"
                    android:checked="true"
                    android:text="@string/pause_mode_highload" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rbModeStop"
                    style="@style/ButtonStyleRadio"
                    android:text="@string/pause_mode_stop" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/vForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvPeriodTitle"
                    style="@style/TextStyle.Black.24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp24"
                    android:text="@string/pause_period_title" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp12"
                    android:scrollbars="none">

                    <RadioGroup
                        android:id="@+id/rgPeriod"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" />
                </HorizontalScrollView>

                <LinearLayout
                    android:id="@+id/vGap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvGapTitle"
                        style="@style/TextStyle.Black.24"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp24"
                        android:text="@string/pause_gap_title" />

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp12"
                        android:scrollbars="none">

                        <RadioGroup
                            android:id="@+id/rgGap"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal" />
                    </HorizontalScrollView>
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvReasonTitle"
                    style="@style/TextStyle.Black.24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp24"
                    android:text="@string/pause_reason_title" />

                <RadioGroup
                    android:id="@+id/rgReason"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp12"
                    android:orientation="vertical" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etComment"
                    style="@style/EditStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp16"
                    android:background="@drawable/ic_bg_rounded_grey_12"
                    android:hint="@string/pause_comment_hint"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/vActive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp24"
                android:orientation="vertical"
                android:visibility="gone">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvStatus"
                    style="@style/TextStyle.Black.24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvActionPause"
                style="@style/ButtonStyleGreen"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/dp36"
                android:elevation="2dp"
                android:enabled="false"
                android:text="@string/pause_action" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivClose"
        android:layout_width="@dimen/dp64"
        android:layout_height="@dimen/dp64"
        android:layout_marginStart="@dimen/dp24"
        android:background="@drawable/ic_bg_circle_tr_ripple"
        android:elevation="2dp"
        android:padding="@dimen/dp14"
        app:layout_constraintStart_toEndOf="@+id/vContentWrapper"
        app:layout_constraintTop_toTopOf="@+id/vContentWrapper"
        app:srcCompat="@drawable/ic_close_36_g" />

</androidx.constraintlayout.widget.ConstraintLayout>
