<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <thapl.com.fudis.ui.components.CheckableTextView
        android:id="@+id/tvOrders"
        style="@style/ButtonStyleMenu"
        android:layout_marginStart="@dimen/dp60"
        android:layout_marginTop="@dimen/dp64"
        android:layout_marginEnd="@dimen/dp10"
        android:drawableStart="@drawable/sl_orders"
        android:text="@string/menu_orders"
        app:layout_constraintEnd_toStartOf="@+id/tvPause"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <thapl.com.fudis.ui.components.CheckableTextView
        android:id="@+id/tvPause"
        style="@style/ButtonStyleMenu"
        android:layout_marginTop="@dimen/dp64"
        android:layout_marginEnd="@dimen/dp10"
        android:drawableStart="@drawable/sl_pause"
        android:text="@string/menu_pause"
        app:layout_constraintEnd_toStartOf="@+id/tvCats"
        app:layout_constraintStart_toEndOf="@+id/tvOrders"
        app:layout_constraintTop_toTopOf="parent" />

    <thapl.com.fudis.ui.components.CheckableTextView
        android:id="@+id/tvCats"
        style="@style/ButtonStyleMenu"
        android:layout_marginTop="@dimen/dp64"
        android:layout_marginEnd="@dimen/dp10"
        android:drawableStart="@drawable/sl_menu"
        android:text="@string/menu_cats"
        app:layout_constraintEnd_toStartOf="@+id/tvStops"
        app:layout_constraintStart_toEndOf="@+id/tvPause"
        app:layout_constraintTop_toTopOf="parent" />

    <thapl.com.fudis.ui.components.CheckableTextView
        android:id="@+id/tvStops"
        style="@style/ButtonStyleMenu"
        android:layout_marginTop="@dimen/dp64"
        android:layout_marginEnd="@dimen/dp10"
        android:drawableStart="@drawable/sl_stops"
        android:text="@string/menu_stops"
        app:layout_constraintEnd_toStartOf="@+id/tvHelp"
        app:layout_constraintStart_toEndOf="@+id/tvCats"
        app:layout_constraintTop_toTopOf="parent" />

    <thapl.com.fudis.ui.components.CheckableTextView
        android:id="@+id/tvHelp"
        style="@style/ButtonStyleMenu"
        android:layout_marginTop="@dimen/dp64"
        android:layout_marginEnd="@dimen/dp50"
        android:drawableStart="@drawable/sl_help"
        android:text="@string/menu_help"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvStops"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/orders_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp40"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHelp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:navGraph="@navigation/orders" />

</androidx.constraintlayout.widget.ConstraintLayout>