<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_bg_80"
    android:fitsSystemWindows="true">

    <mb.delivery.operator.ui.components.CheckableTextView
        android:id="@+id/tvOrders"
        style="@style/ButtonStyleMenu"
        android:layout_marginStart="@dimen/dp60"
        android:layout_marginTop="@dimen/dp64"
        android:layout_marginEnd="@dimen/dp10"
        android:drawableStart="@drawable/sl_orders"
        android:text="@string/menu_orders"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/tvPause"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <mb.delivery.operator.ui.components.CheckableTextView
        android:id="@+id/tvPause"
        style="@style/ButtonStyleMenu"
        android:layout_marginTop="@dimen/dp64"
        android:layout_marginEnd="@dimen/dp10"
        android:drawableStart="@drawable/sl_pause"
        android:text="@string/menu_pause"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/tvCats"
        app:layout_constraintStart_toEndOf="@+id/tvOrders"
        app:layout_constraintTop_toTopOf="parent" />

    <mb.delivery.operator.ui.components.CheckableTextView
        android:id="@+id/tvCats"
        style="@style/ButtonStyleMenu"
        android:layout_marginTop="@dimen/dp64"
        android:layout_marginEnd="@dimen/dp10"
        android:drawableStart="@drawable/sl_menu"
        android:text="@string/menu_cats"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/tvStops"
        app:layout_constraintStart_toEndOf="@+id/tvPause"
        app:layout_constraintTop_toTopOf="parent" />

    <mb.delivery.operator.ui.components.CheckableTextView
        android:id="@+id/tvStops"
        style="@style/ButtonStyleMenu"
        android:layout_marginTop="@dimen/dp64"
        android:layout_marginEnd="@dimen/dp10"
        android:drawableStart="@drawable/sl_stops"
        android:text="@string/menu_stops"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/tvHelp"
        app:layout_constraintStart_toEndOf="@+id/tvCats"
        app:layout_constraintTop_toTopOf="parent" />

    <mb.delivery.operator.ui.components.CheckableTextView
        android:id="@+id/tvHelp"
        style="@style/ButtonStyleMenu"
        android:layout_marginTop="@dimen/dp64"
        android:layout_marginEnd="@dimen/dp50"
        android:drawableStart="@drawable/sl_help"
        android:text="@string/menu_help"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvStops"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/vContentWrapper"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp24"
        android:layout_marginBottom="@dimen/dp24"
        android:background="@drawable/ic_bg_rounded_wh_32"
        android:elevation="2dp"
        android:paddingStart="@dimen/dp48"
        android:paddingTop="@dimen/dp36"
        android:paddingEnd="@dimen/dp48"
        android:paddingBottom="@dimen/dp36"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.82"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStops"
        app:layout_constraintWidth_percent="0.62">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOrgTitle"
            style="@style/TextStyle.Black.24"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pause_org_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOrganization"
            style="@style/EditStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp12"
            android:background="@drawable/ic_bg_rounded_grey_12"
            android:drawableEnd="@drawable/ic_chevron_big_down"
            android:gravity="center_vertical"
            android:hint="@string/pause_org_hint"
            android:minHeight="@dimen/dp64"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOrgTitle" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etSearch"
            style="@style/EditStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp64"
            android:layout_marginTop="@dimen/dp24"
            android:background="@drawable/ic_bg_rounded_grey_12"
            android:hint="@string/stops_product_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOrganization" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvProducts"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dp16"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etSearch" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEmpty"
            style="@style/TextStyle.Grey.24"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/stops_pick_org"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/rvProducts"
            app:layout_constraintEnd_toEndOf="@+id/rvProducts"
            app:layout_constraintStart_toStartOf="@+id/rvProducts"
            app:layout_constraintTop_toTopOf="@+id/rvProducts" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivClose"
        android:layout_width="@dimen/dp64"
        android:layout_height="@dimen/dp64"
        android:layout_marginStart="@dimen/dp24"
        android:background="@drawable/ic_bg_circle_tr_ripple"
        android:elevation="2dp"
        android:padding="@dimen/dp14"
        app:layout_constraintStart_toEndOf="@+id/vContentWrapper"
        app:layout_constraintTop_toTopOf="@+id/vContentWrapper"
        app:srcCompat="@drawable/ic_close_36_g" />

</androidx.constraintlayout.widget.ConstraintLayout>
